[Eng] - All changes to this project will be documented in this file. The latest changes are at the top.

## [ver. 3.35] - 28.04.2024
### FIX
- FIX - Sound bug with important spell filters
- FIX - Removed the # in Instance difficulty label of the Objectivetracker
- FIX - TAG mRole is only available for Retail and Cata not for Classic
- FIX - Spell in enUS Locals, thx for Trenchy help
### Update
- UPDATE - Add sound delay for important spell filters
- UPDATE - Update for Cata
- UPDATE - Example Docks for Cata
- UPDATE - Interrupt Spells for WL
- UPDATE - Execute Marker now takes care of Monk Health.
### NEW
- NEW - Debugmode /mmt debug and /mmt debug safe (test wit only mmt and with mmt and safe addons)

## [ver. 3.34] - 28.04.2024
### FIX
- FIX - Prevent nil error with important spells
- FIX - Prevent nil error with tex coords Portraits/Class Icons
- FIX - Prevent nil error with instancdifficulty
- FIX - Fixed color table bug with DK classes
### NEW
- NEW - TAG mRoleIcon:blizz:nodd and mRoleIcon:nodd
- NEW - Icons for castbar

## [ver. 3.33] - 25.04.2024
### FIX
- FIX - Wrong reaction colors on portraits, thx to Tsxy
- FIX - Prevent nil Error with Dungeon Score colors (https://github.com/Stanzilla/WoWUIBugs/issues/544)
- FIX - Arena Portraits wont update correctly
### Update
- UPDATE - Enabled mRoleIcon Tags for Classic Versions
- UPDATE - Cleand up and optimized Objectivetracker Settings
- UPDATE - Teleports for S4
- UPDATE - Healthmarkers for S4
- UPDATE - Rework of the Important Spells module, the behavior is no like ElvUI Style filters, a filter ca now react now to more then one spell id. This update will reset the Spell DB.
- UPDATE - Currency for S4
- UPDATE - TOC file for Classic
### NEW
- NEW - Background Skin for the Objectivetracker
- NEW - Support for Eltruism gradient colors, Portraits and Objectivtracker, can now use the custom gradient colors of Eltruism

## [ver. 3.32] - 28.03.2024
### FIX
- FIX - take care of JiberishIcons changes