@@ -1,6 +1,6 @@
 ## Interface: 11502
 ## Author: Blinkii
-## Version: 3.34
+## Version: 3.35
 ## Title: |CFF6559F1m|r|CFFA037E9M|r|CFFDD14E0T|r - |CFF6559F1m|r|CFF7A4DEFM|r|CFF8845ECe|r|CFFA037E9d|r|CFFA435E8i|r|CFFB32DE6a|r|CFFBC26E5T|r|CFFCB1EE3a|r|CFFDD14E0g|r |CFFFF006C&|r |CFFFF4C00T|r|CFFFF7300o|r|CFFFF9300o|r|CFFFFA800l|r|CFFFFC900s|r
 ## Notes: mMediaTag & Tools is a plugin for ElvUI. mMediaTag adds many media files like textures/ fonts/ icons and some tools to ElvUI.
 ## Notes-deDE: mMediaTag & Tools ist ein Plugin für ElvUI. mMediaTag fügt viele Mediendateien wie Texturen/ Schriften/ Symbole und einige Tools zu ElvUI hinzu.
