@@ -1,6 +1,6 @@
 ## Interface: 100206
 ## Author: Blinkii
-## Version: 3.34
+## Version: 3.35
 ## Title: |CFF6559F1m|r|CFFA037E9M|r|CFFDD14E0T|r - |CFF6559F1m|r|CFF7A4DEFM|r|CFF8845ECe|r|CFFA037E9d|r|CFFA435E8i|r|CFFB32DE6a|r|CFFBC26E5T|r|CFFCB1EE3a|r|CFFDD14E0g|r |CFFFF006C&|r |CFFFF4C00T|r|CFFFF7300o|r|CFFFF9300o|r|CFFFFA800l|r|CFFFFC900s|r
 ## Notes: ElvUI Plugin from Blinkii | Support: mMediaTag@gmx.de
 ## IconTexture: Interface\AddOns\ElvUI_mMediaTag\media\logo\mmt_icon
